# pico1541-rs

./: BUILD.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.jenkins  Jenkinsfile  LICENSE  README.md  build.rs  build.sh  ci.sh  run.sh
.cargo/: config.toml
.scripts/: pico-bootsel.sh  pico-dev8-i.sh  pico-dev8-status.sh  pico-info.sh  pico-init.sh  pico-read.sh  pico-reset.sh  pico-shutdown.sh  pico-write.sh  pico-write1.sh  xum-dev8-status.sh  xum-init.sh  xum-reset.sh  xum-shutdown.sh
.scripts/usbcmd/: usbcmd.py
firmware/cyw43/: README.md
hw_tests/: drive.rs  receiver.rs  sender.rs
pcb/: LICENSE
pcb/gerbers/: pico1541 v0.1-B_Cu.gbr  pico1541 v0.1-F_Mask.gbr  pico1541 v0.1-F_Silkscreen.gbr  pico1541 v0.1-PTH.drl  pico1541 v0.1-job.gbrjob
pcb/v0.1/gerbers/: pico1541 v0.1-B_Mask.gbr  pico1541 v0.1-B_Paste.gbr  pico1541 v0.1-B_Silkscreen.gbr  pico1541 v0.1-Edge_Cuts.gbr  pico1541 v0.1-F_Cu.gbr  pico1541 v0.1-F_Paste.gbr  pico1541 v0.1-NPTH.drl
pcb/v0.1/kicad/: pico1541 v0.1.kicad_pcb  pico1541 v0.1.kicad_pro  pico1541 v0.1.kicad_sch
pcb/v0.2/kicad/: pico1541 v0.2.kicad_pcb  pico1541 v0.2.kicad_prl  pico1541 v0.2.kicad_pro  pico1541 v0.2.kicad_sch
scripts/: build_all.sh  common.sh
src/: README.md  built.rs  bulk.rs  constants.rs  control.rs  core1.rs  dev_info.rs  display.rs  driver.rs  entry.rs  gpio.rs  iec.rs  ieee.rs  lib.rs  protocol.rs  rom.rs  tape.rs  task.rs  time.rs  transfer.rs  types.rs  usb.rs  watchdog.rs  wifi.rs
src/infra/: display.rs  gpio.rs  mod.rs  watchdog.rs
src/protocol/: driver.rs  iec.rs  ieee.rs  mod.rs  read.rs  read_non_cbm.rs  tape.rs  types.rs  write.rs
src/test/: device.rs  mod.rs  pins.rs
src/usb/: bulk.rs  control.rs  mod.rs  transfer.rs
src/util/: built.rs  dev_info.rs  mod.rs  time.rs
src/wifi/: mod.rs
