[package]
name = "pico1541-rs"
version = "0.1.0"
edition = "2021"
authors = ["Piers Finlayson <piers@piers.rocks>"]
description = "A USB-based Commodore disk drive adapter for PCs, compatible with OpenCBM and drop-in replacement for the xum1541 "
repository = "https://github.com/piersfinlayson/pico1541-rs"
readme = "README.md"
license = "GPLv3"
keywords = ["OpenCBM", "xum1541", "Commodore", "disk", "embassy"]

# Do not use arbitrary sets of features manually to build different versions of the firmware.
# Instead, use cargo build --bin xum1541|pico1541|pico1541w  --features xum1541|pico1541|pico1541w
[features]
xum1541 = [ "compatibility" ]
pico1541 = [ "extended" ]
pico1541w = [ "extended", "wifi" ]
compatibility = []
extended = []
wifi = []
prototype = []

[lib]
name = "pico1541_rs"
path = "src/lib.rs"

# Builds an xum1541 compatible firmware - you have manually specify the
# required feature(s)
[[bin]]
name = "xum1541"
path = "src/bin/xum1541.rs"
test = false
required-features = ["xum1541"]

# Builds a pico1541 firmware  - you have to manually specify the required
# feature(s)
[[bin]]
name = "pico1541"
path = "src/bin/pico1541.rs"
test = false
required-features = ["pico1541"]

# Builds pico1541 firmware with WiFi support - you have to manually specify
# the required feature(s)
[[bin]]
name = "pico1541w"
path = "src/bin/pico1541w.rs"
test = false
required-features = ["pico1541w"]

[dependencies]
# embassy-rs crates
embassy-executor = { version = "0.7", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-rp = { version = "0.3", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040", "intrinsics"] }
embassy-usb = { version = "0.4", features = ["defmt"] }
embassy-futures = { version = "0.1" }
embassy-sync = { version = "0.6", features = ["defmt"] }
embassy-time = { version = "0.4", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-embedded-hal = { version = "0.3" }

# Required for StaticCell and ConstStaticCell
static_cell = { version = "2.1" }
portable-atomic = { version = "1.10", features = ["critical-section"] }

# Required for heapless::{String, Vec}
heapless = { version = "0.8" }

# WiFi support
cyw43 = { version = "0.3", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.3", features = ["defmt"] }

# defmt (for RTT logging)
defmt = "0.3"
defmt-rtt = "0.4"

# Required for embassy on Raspberry Pi (Cortex M0)
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"

# Required for Debug Probe panic support
panic-probe = { version = "0.3", features = ["print-defmt"] }

# Required for embasse_time::Delay support
embedded-hal = "1.0"

# Allows us to handle bitflags gracefully
bitflags = "2.8"

# Exposes reset_usb_boot() RP2040 bootrom function (for reboot to DFU mode)
rp2040-rom = "0.1.1"

# Provides static asserts
static_assertions = "1.1"

[build-dependencies]
# Required for required build.rs support
built = { version = "0.7", features = ["git2", "chrono"] }

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
